--- a/k8s_valid_yaml_and_invalid_yaml_bad_format_json/k8s_with_issues.yml
+++ b/k8s_valid_yaml_and_invalid_yaml_bad_format_json/k8s_with_issues.yml
@@ -32,3 +32,4 @@ spec:
           image: nginx:1.7.9
           securityContext:
             privileged: true
+# Modified [k8s_with_issues.yml] on [2020-11-30 14:32:26.766900]
